# blip-caption

./: README.md  blip_caption.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_blip_caption.py
